<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:padding="25dp"
    android:background="@color/cardview_dark_background">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome to my App"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints="name"
        android:background="@drawable/background_login"
        android:hint="@string/username"
        android:paddingStart="10dp"
        android:textAllCaps="false"
        android:textColorHint="@color/material_dynamic_neutral60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias=".1" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints="name"
        android:background="@drawable/background_login"
        android:hint="@string/password"
        android:paddingStart="10dp"
        android:textAllCaps="false"
        android:textColorHint="@color/material_dynamic_neutral60"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints="name"
        android:background="@drawable/background_login"
        android:hint="@string/email"
        android:paddingStart="10dp"
        android:textAllCaps="false"
        android:textColorHint="@color/material_dynamic_neutral60"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <EditText
        android:id="@+id/rePassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints="name"
        android:background="@drawable/background_login"
        android:hint="@string/repassword"
        android:paddingStart="10dp"
        android:textAllCaps="false"
        android:textColorHint="@color/material_dynamic_neutral60"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rePassword"
        android:hint="@string/register"
        android:padding="14dp"
        app:layout_constraintVertical_bias=".2"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>